Merge pull request #37 in IP/idemia19 from IDEMIA2019-99-basic-docker-settng-for-backend to master
Squashed commit of the following:

commit 1d6c8497b7c348b7096aa9f85e940381ff927705
Author: Michal Malec <michal.malec@idemia.com>
Date:   Thu Mar 28 14:43:42 2019 +0100

    [IDEMIA2019-99] Basic docker setting for backend.